--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
+    "broccoli-merge-trees": "^0.2.1",
+    "broccoli-sass": "^0.6.4",
     "ember-cli": "0.2.3",
     "ember-cli-app-version": "0.3.3",
+    "ember-cli-autoprefixer": "^0.3.0",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "0.0.8",
