--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "afisha",
   "dependencies": {
-    "ember": "1.11.1",
+    "ember": "1.13.0-beta.2",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "1.0.0-beta.16.1",
+    "ember-data": "1.0.0-beta.18",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
     "ember-qunit": "0.3.1",
     "ember-qunit-notifications": "0.0.7",
@@ -12,7 +12,6 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
-    "susy": "~2.2.2",
-    "breakpoints": "~2.0.0"
+    "normalize.css": "~3.0.3"
   }
 }
