--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "broccoli-asset-rev": "^2.0.2",
     "broccoli-merge-trees": "^0.2.1",
     "broccoli-sass": "^0.6.4",
-    "ember-cli": "0.2.3",
+    "ember-cli": "0.2.5",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-autoprefixer": "^0.3.0",
     "ember-cli-babel": "^5.0.0",
@@ -33,7 +33,10 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.16.1",
-    "ember-export-application-global": "^1.0.2"
+    "ember-data": "1.0.0-beta.18",
+    "ember-export-application-global": "^1.0.2",
+    "express": "^4.12.4",
+    "glob": "^4.5.3",
+    "morgan": "^1.5.3"
   }
 }
